# voice-clone

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  railway.toml
.sessions/: .gitkeep
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/voice_clone/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/src/voice_clone/ai/: __init__.py  anthropic_provider.py  openai_provider.py  provider.py
backend/src/voice_clone/ai/prompts/: __init__.py  analysis.py  generation.py  merge.py
backend/src/voice_clone/api/: __init__.py  content.py  export.py  health.py  library.py  router.py  settings.py  voice_clones.py
backend/src/voice_clone/models/: __init__.py  base.py  content.py  settings.py  usage.py  user.py  voice_clone.py  voice_dna.py  writing_sample.py
backend/src/voice_clone/parsers/: __init__.py  docx.py  pdf.py  url.py
backend/src/voice_clone/schemas/: __init__.py  content.py  settings.py  user.py  voice_clone.py
backend/src/voice_clone/services/: __init__.py  analysis.py  detection.py  generation.py  merge.py  settings.py  user.py  voice_clone.py  writing_sample.py
backend/src/voice_clone/utils/: __init__.py  encryption.py
backend/tests/: __init__.py  conftest.py  factories.py  test_exceptions.py  test_health.py
backend/tests/integration/api/: __init__.py
backend/tests/unit/models/: test_content.py  test_settings.py  test_usage.py  test_user.py  test_user_api_key.py  test_voice_clone.py  test_voice_dna.py  test_writing_sample.py
backend/tests/unit/schemas/: __init__.py  test_content_schemas.py  test_settings_schemas.py  test_user_schemas.py  test_voice_clone_schemas.py
backend/tests/unit/services/: __init__.py
docs/: coding-standards.md  conflict-resolution.md  git-workflow.md  implementation-plan.md  parallel-sessions-quickref.md  plan-summary.md  plan.md  (+5 more)
(+103 files in other folders)
